--- a/frontend/src/pages/OSCESPage/OSCESPage.scss
+++ b/frontend/src/pages/OSCESPage/OSCESPage.scss
@@ -24,15 +24,12 @@ body {
 }
 
 /* Header */
-header {
-  position: sticky;
-  top: 0;
+.header-timer-badge {
   background: rgba(255, 255, 255, 0.56);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(9.9px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding: 12px 16px;
-  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,14 +52,18 @@ main {
   max-width: 1600px; /* was 1200px → more horizontal space */
   margin: 0 auto;
   padding: 40px 24px 60px; /* less padding → cards closer to edges */
+
 }
 
 /* Layout */
 .content-grid {
   display: grid;
-  grid-template-columns: 38% 62%;
+  grid-template-columns: 47% 50% ;
   gap: 20px; /* smaller gap between columns */
   align-items: start;
+  border: 2px solid chocolate;
+  
+  justify-content: center; // centers horizontally if there’s free space
 }
 
 /* Cards */
