--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -32,18 +32,23 @@
             margin-top: 30px;
             padding: 0;
 
-            li {
+            li{
                 display: flex;
                 align-items: center;
                 gap: 1rem;
-                padding: 12px;
-                margin-right: 10px;
+                border-radius: 5px;
                 cursor: pointer;
+                margin: 17px 10px 0px 10px;
+                padding: 5px;
+                background-color: #e0e0e0;
+                transition: padding 0.5s , background-color 0.5s , color 0.5s , font-size 0.5s ;
+            }
+
+            li:hover , .chosen {                
+                padding: 12px;
                 background-color: #14b8a6 ;
-                // background: #e0e0e0;
                 color: rgb(255, 255, 255) ;
                 font-size: 20px;
-                border-radius: 5px;
                 box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
             }
