--- a/frontend/src/pages/adminPage/adminpage.scss
+++ b/frontend/src/pages/adminPage/adminpage.scss
@@ -171,7 +171,7 @@
                 flex-direction: column;
                 align-items: center;
 
-                .listTitle{ font-size: 3rem ; }
+                .listTitle{ font-size: 3rem ; margin-top: 3rem; }
 
                 .examList{
                     // border: 2px solid #FF9D00 ;
