--- a/frontend/src/components/adminNavbar/adminNavbar.scss
+++ b/frontend/src/components/adminNavbar/adminNavbar.scss
@@ -70,8 +70,9 @@
                 margin-right: 20px;
                 border-radius: 10px;
                 padding: 10px ;
-                                font-size: 1.1rem;
+                font-size: 1.1rem;
                 font-weight: 550 ;
+                border: none;
                 
                 .user{
                     display: flex;
