--- a/frontend/src/components/examCard/examCard.scss
+++ b/frontend/src/components/examCard/examCard.scss
@@ -1,11 +1,18 @@
 .examCard {
   background: #fffbfb;
   border-radius: 12px;
-  box-shadow: 12px 12px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 12px 12px 0px #0000001a;
   padding: 16px;
   transition: 0.2s ease;
   width: 460px ;
+  position: relative;
   
+  .selectBoxTopRight {
+   position: absolute;
+  top: 10px;
+  right: 10px;
+  input { width: 18px; height: 18px; }
+}
 
   &:hover {
     transform: translateY(-3px);
