--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -75,18 +75,24 @@
 
             }
 
-                .navButton {
-                    border-radius: 10px;
-                    background-color: #14b8a6 ;
-                    padding: 10px ;
-                    display: flex;
-                    align-items: center;
-                    gap: 8px;
-                    color: rgb(255, 255, 255);
-                    margin-right: 10px;
-                    text-decoration: none;
-                    
-                }
+            .navButton {
+                border: none;
+                border-radius: 10px;
+                background-color: #14b8a6 ;
+                padding: 10px ;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                color: rgb(255, 255, 255);
+                margin-right: 10px;
+                text-decoration: none;
+                
+            }
+
+            button{
+                font-size: 18px;
+                font-weight: 500;
+            }
 
 
         }
