--- a/frontend/src/components/examRoomCard/examRoomCard.scss
+++ b/frontend/src/components/examRoomCard/examRoomCard.scss
@@ -45,42 +45,58 @@
     padding: 1.5rem; /* p-6 */
     }
 
+    p.info{
+        font-size: 15px;
+        font-weight: 700;
+        margin-bottom: 5px;
+    }
+
     .heading {
-    margin: 0 0 .5rem 0;
-    font-size: 1.5rem;   /* text-2xl */
-    font-weight: 700;    /* bold */
-    line-height: 1.25;   /* leading-tight */
-    color: #0f172a;      /* slate-900 */
+        margin: 0 0 .5rem 1rem;
+        font-size: 1.2rem;   /* text-2xl */
+        
+        line-height: 1.25;   /* leading-tight */
+        color: #0f172a;      /* slate-900 */
     }
 
     .time-row {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    color: #475569;      /* slate-600 */
-    font-size: 1rem;     /* text-base */
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+        color: #475569;     
+        font-size: 1rem;     
     }
 
     .time-row svg {
-    width: 1.25rem;  /* w-5 */
-    height: 1.25rem; /* h-5 */
+    width: 1.25rem; 
+    height: 1.25rem; 
     flex: none;
     }
 
     /* Button */
     .btn {
-    display: inline-block;
-    width: 100%;
-    padding: 1rem 1.5rem;            /* py-4 px-6 */
-    border: 0;
-    border-radius: .75rem;           /* rounded-xl */
-    background: #14b8a6  ;
-    color: #fff;
-    font-weight: 700;
-    text-align: center;
-    cursor: pointer;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        display: inline-block;
+        width: 100%;
+        padding: 1rem;            
+        border: 0;
+        border-radius: .75rem;           
+        background: #14b8a6  ;
+        color: #fff;
+        font-weight: 700;
+        text-align: center;
+        cursor: pointer;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
+    }
+
+    .btn-admin{
+        background: #FF8040 ;
+        padding: 0.5rem;
+        font-size: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
     }
 
     /* Spacing helpers */
