--- a/frontend/src/pages/loginPage/loginPage.scss
+++ b/frontend/src/pages/loginPage/loginPage.scss
@@ -138,8 +138,9 @@ $gray-800: #1f2937;
 
   input[type="email"],
   input[type="password"],
-  input[type="text"] {
-    width: 100%;
+  input[type="text"],
+  select {
+    width: 93%;
     border-radius: 12px;
     border: 1px solid $gray-200;
     @include glassy(rgba(255,255,255,0.8));
@@ -147,6 +148,7 @@ $gray-800: #1f2937;
     outline: none;
     transition: box-shadow .2s ease, border-color .2s ease, background .2s ease;
   }
+
 
   input::placeholder { color: $gray-500; }
 
