--- a/frontend/src/pages/homePage/homePage.scss
+++ b/frontend/src/pages/homePage/homePage.scss
@@ -410,7 +410,7 @@
 
 .section--examRoom {
   min-height: 50vh; 
-  border: 2px solid tomato;
+  // border: 2px solid tomato;
   position: relative;
 
   h2{
@@ -423,7 +423,7 @@
   .examRoom-container {
     
     padding: 20px;
-    border: 2px solid #B77466 ;
+    // border: 2px solid #B77466 ;
     width: 100%;
     height: 100%;
     display: flex;
