--- a/frontend/src/components/adminNavbar/adminNavbar.scss
+++ b/frontend/src/components/adminNavbar/adminNavbar.scss
@@ -97,6 +97,11 @@
                 color: rgb(252, 252, 252);
                 background: #F25912 ;
                 gap: 10px;
+                transition: 0.2s ease;
+
+                &:hover {
+                    background-color: #b4420d ;
+                }
                 
                 
             }
