--- a/frontend/src/pages/adminPage/adminTab/studentLists/studentlists.scss
+++ b/frontend/src/pages/adminPage/adminTab/studentLists/studentlists.scss
@@ -1,11 +1,11 @@
 
 
 .student-lists-tab{
-  border: 3px solid #a6104c;
+  // border: 3px solid #a6104c;
   // min-height: 100vh;
 
   .sl-container {
-    border: 4px solid rgb(52, 212, 65);
+    // border: 4px solid rgb(52, 212, 65);
     margin: 0 auto;
     padding: 15px ;
     height: 100%;
@@ -49,7 +49,7 @@
 
     /* --- Student List MAIN --- */
     .sl-main {
-      border: 2px solid #FF6C0C ;
+      // border: 2px solid #FF6C0C ;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -79,12 +79,12 @@
         flex-direction: column;
         gap: 1.5rem;
 
-        .card-content{
-
+        .card-content {
           .switch-student-option{
-
+            display: flex; justify-content: center;
+            gap: 10px;
+            margin-bottom: 10px;
           }
-
 
           .option1-manual{
             textarea{
@@ -92,8 +92,7 @@
             }
           }
 
-          .option2-upload{
-            
+          .option2-upload{       
             border: 4px dashed #1f1c1c37 ;
             background: #d4d3d337 ;
             padding: 20px;
@@ -129,62 +128,70 @@
                 border: 0;
               }
             }
-
           }
-
         }
-        
       }
 
       .sl-card-bottom {
         width: 100% ;
       }
-
     }
+
+      .add-email-btn , .publish-btn {
+        background-color: #14b8a6;
+        color: #fff;
+        display: flex; justify-content: center; align-items: center;
+        gap: 5px;
+        border: none;
+        border-radius: 8px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: 0.2s ease;
+        padding: 0.5rem;
+
+        &:hover {
+          background-color: #0d9488;
+        }
+      }
 
     /* --- Student List BOTTOM --- */
     .sl-bottom {
-      margin:10px;
+      margin-top: 2rem;
+      display: flex; justify-content: center;
+      .publish-btn  {
+        padding: 0.7rem 1.5rem;
+        font-weight: 600;
+      }
     }
-    
   }
 
   /* HTML: <div class="loader"></div> */
-.loader {
-  width: 45px;
-  aspect-ratio: 1;
-  --c: no-repeat linear-gradient(#000 0 0);
-  background: 
-    var(--c) 0%   50%,
-    var(--c) 50%  50%,
-    var(--c) 100% 50%;
-  background-size: 20% 100%;
-  animation: l1 1s infinite linear;
-}
-@keyframes l1 {
-  0%  {background-size: 20% 100%,20% 100%,20% 100%}
-  33% {background-size: 20% 10% ,20% 100%,20% 100%}
-  50% {background-size: 20% 100%,20% 10% ,20% 100%}
-  66% {background-size: 20% 100%,20% 100%,20% 10% }
-  100%{background-size: 20% 100%,20% 100%,20% 100%}
-}
+  .loader {
+    width: 45px;
+    aspect-ratio: 1;
+    --c: no-repeat linear-gradient(#000 0 0);
+    background: 
+      var(--c) 0%   50%,
+      var(--c) 50%  50%,
+      var(--c) 100% 50%;
+    background-size: 20% 100%;
+    animation: l1 1s infinite linear;
+  }
+  @keyframes l1 {
+    0%  {background-size: 20% 100%,20% 100%,20% 100%}
+    33% {background-size: 20% 10% ,20% 100%,20% 100%}
+    50% {background-size: 20% 100%,20% 10% ,20% 100%}
+    66% {background-size: 20% 100%,20% 100%,20% 10% }
+    100%{background-size: 20% 100%,20% 100%,20% 100%}
+  }
   
 }
-
-
 
 h3 { font-size: 25px; font-weight: 700; margin: 0; }
 .small { font-size: 0.875rem; }
 .muted { color: #64748b; }
 .mono { font-family: ui-monospace, Menlo, Consolas, "Liberation Mono", monospace; }
 
-
-
-/* 5) BUTTONS */
-.btn {
-    background: #12b6c8 ;
-    color: #ffffff ;
-}
 
 /* 6) FORM CONTROLS */
 .input, .textarea {
@@ -214,13 +221,15 @@ h3 { font-size: 25px; font-weight: 700; margin: 0; }
 /* 8) TABLE */
 .table-wrap {
   border-radius: 10px;
-  overflow: hidden;
+  overflow-y: scroll;
   background: #fff;
+  height: 60vh;
 
   .table {
     width: 100%;
     border-collapse: collapse;
     font-size: 0.95rem;
+    height: 100%;
     
 
     .thead {
