--- a/frontend/src/pages/adminPage/adminpage.scss
+++ b/frontend/src/pages/adminPage/adminpage.scss
@@ -1,6 +1,7 @@
 .AdminPageHome {
+    min-height: 100vh;
     display: flex;
-    // border: 3px solid black;
+    //border: 3px solid black;
 
     .homeContainer{
         // border: 2px solid rgb(220, 77, 77);
@@ -166,24 +167,6 @@
                 &:active {
                     transform: scale(0.98);
                 }
-                }
-            }
-
-            .examListContainer{
-                // border: 2px solid #9E1C60 ;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                .listTitle{ font-size: 3rem ; margin-top: 3rem; }
-
-                .examList{
-                    // border: 2px solid #FF9D00 ;
-                    padding: 20px;
-                    width: 100%;
-                    display: flex;
-                    flex-wrap: wrap;
-                    gap: 1.5rem;
                 }
             }
             
