--- a/frontend/src/pages/patientCaseDetailPage/patientCaseDetailPage.scss
+++ b/frontend/src/pages/patientCaseDetailPage/patientCaseDetailPage.scss
@@ -22,20 +22,19 @@
   margin-bottom: 5rem;
   padding: 10px;
 
-
   .caseDetail-top{
 
-    .backBtn {
-      background: none;
-      border: none;
-      color: #14b8a6;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 0.3rem;
+    .back-btn {
+      display: flex; justify-content: center; align-items: center;
+      width: 10rem;
+      margin-bottom: 12px; padding: 8px;
+      border: 1px solid #e2e8f0; border-radius: 8px;
+      background-color: #f8fafc;
       cursor: pointer;
-      margin-bottom: 1rem;
+      font-weight: 600;
+      transition: background-color 0.5s ease;
     }
+    .back-btn:hover { background-color: #cacdd1; }
 
     .caseDetail__title {
       font-size: 1.8rem;
@@ -46,7 +45,6 @@
       color: #666;
       margin-bottom: 1rem;
     }
-
   }
 
   .caseDetail-main {
@@ -440,6 +438,28 @@
         margin-top: 1.25rem;
       }
     }
+  }
+
+  .caseDetail-bottom{
+    margin-top: 5rem;
+    display: flex; justify-content: center;
+    button {
+      background-color: #14b8a6;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 0.7rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 500;
+      cursor: pointer;
+      align-self: flex-start;
+      transition: 0.2s ease;
+
+      &:hover {
+        background-color: #0d9488;
+      }
+    }
+
   }
 
 }
